# marketo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_on_mac.sh  icons.h
debian/: changelog  control  copyright
icons/: CMakeLists.txt
marknote/: CMakeLists.txt  kmarknote.cpp  kmarknote.h  kmarknote_generalsettings.kcfg  listpanel.cpp  listpanel.h  main.cpp  mainview.cpp  mainview.h  marknote.cpp  marknote.desktop  marknote.h  navpanel.cpp  navpanel.h  noteview.cpp  noteview.h  panel.cpp  panel.h  terminalpanel.cpp  terminalpanel.h
marknoto/: CMakeLists.txt  Home.cm  Home.md  icon.rc  iconfilter.cpp  iconfilter.h  listitemdelegate.cpp  listitemdelegate.h  listpanel.cpp  listpanel.h  main.cpp  mainview.cpp  mainview.h  marknote.cpp  marknote.desktop  marknote.h  marknoto.cpp  marknoto.desktop  marknoto.h  marknoto.rc  metadata.cpp  metadata.h  navpanel.cpp  navpanel.h  noteview.cpp  noteview.h  panel.cpp  taglist.cpp  taglist.h  terminalpanel.cpp
marknoto/data/: index.html  marknoto.qrc  marknoto.rc
marknoto/icons/: CMakeLists.txt
marknoto/po/: CMakeLists.txt  Messages.sh  marknoto.pot  zh_CN.po
markpad/: CMakeLists.txt  highlighterbykate.cpp  highlighterbykate.h  htmlgenerator.cpp  kmarknote_generalsettings.kcfg  kmarkpad.cpp  kmarkpad.desktop  kmarkpad.h  kmarkpad.rc  main.cpp  mainwindow.cpp  mainwindow.h  markpad.cpp  markpad.desktop  markpad.h
markpad/css/: style.css
markpad/icons/: CMakeLists.txt
markpado/: CMakeLists.txt  Messages.sh  document.cpp  document.h  highlighterbykate.cpp  highlighterbykate.h  htmlgenerator.cpp  icon.rc  main.cpp  mainwindow.cpp  mainwindow.h  markpado.cpp  markpado.desktop  markpado.h  webpage.cpp  webpage.h
markpado/css/: CMakeLists.txt  style.css
markpado/data/: markpado.qrc  qwebchannel.js
markpado/icons/: CMakeLists.txt
markpado/po/: CMakeLists.txt  Messages.sh  markpado.pot  zh_CN.po
part/: CMakeLists.txt  marketopart.desktop  part.cpp  part.h
src/: CMakeLists.txt  Messages.sh  highlighterbykate.cpp  highlighterbykate.h  htmlgenerator.cpp  htmlgenerator.h  kmarknote.cpp  kmarknote.desktop  kmarknote.h  kmarknote.rc  kmarknote.ui  kmarknote_generalsettings.kcfgc  kmarkpad.cpp  kmarkpad.h  kmarkview.cpp  kmarkview.h  listpanel.h  main.cpp  mainview.cpp  mainview.h  mainwindow.h  navpanel.h  noteview.cpp  noteview.h  panel.h  terminalpanel.cpp  terminalpanel.h  terminalview.cpp  terminalview.h
src/sync_script/: mknote.sh  weizi.sh  yinxiang.sh
